# arbench

./: .env  .gitignore  README.md  dc_evaluator.sh  environment.yaml  pyproject.toml  requirements.txt  sp_evaluator.sh
arbench/: __init__.py
arbench/reasoner/: __init__.py  utils.py
arbench/utils/: __init__.py  eval_dc_accuracy.py  inference.py  interactive_policy.py  interactive_policy_client.py  interactive_policy_client_v1.py  interactive_policy_client_v2.py  interactive_policy_client_v3.py  policy_tagloop_client.py  utils_dc.py  utils_gn.py  utils_sp.py
data/dc/: demo.json  test.json
data/gn/: test.json  train.json
results/: Qwen2.5-7B-Instruct.json  dc_interactive_zero_shot_ENDOFSENTENCE.json  dc_interactive_zero_shot_ENDOFSENTENCE_20250926_v1.json  dc_interactive_zero_shot_ENDOFSENTENCE_20250926_v2.json  dc_interactive_zero_shot_ENDOFTHINK_TWO.json  dc_interactive_zero_shot__20250927_0112.json  dc_interactive_zero_shot__20250927_0131.json  dc_interactive_zero_shot__20250927_1309.json  dc_interactive_zero_shot__20250927_2017.json  dc_interactive_zero_shot__20250927_2340.json  dc_interactive_zero_shot_endofthink.json  dc_interactive_zero_shot_endofthink_plus.json  dc_interactive_zero_shot_nothink.json  dc_interactive_zero_shot_plus.json  dc_interactive_zero_shot_v3_2025_0929_2244.json  dc_interactive_zero_shot_v3_2025_0930_008.json  dc_interactive_zero_shot_v3_2025_0930_021.json  dc_interactive_zero_shot_v3_2025_0930_047.json  distill_r1.json  r1_tagloop.json  r1_tagloop_20250917_1712.json  r1_tagloop_20250917_1732.json  r1_tagloop_new.json
(+31 files in other folders)
